data/derived/sp14/progs/unify/prog4096.ml.out
Characters 72-73:
  | h::t -> listReverse (t::(cat l h));;
                         ^
Error: This expression has type 'a list
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a list
